--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
 
     - name: Cache Docker layers
       uses: actions/cache@v3
@@ -52,16 +52,26 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-buildx
 
+#    - name: Create .env file
+#      run: |
+#        echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
+#        echo DEBUG=${{ secrets.DEBUG }} >> .env
+#        echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+#        echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+#        echo DB_USER=${{ secrets.DB_USER }} >> .env
+#        echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
+#        echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+#        echo DB_PORT=${{ secrets.DB_PORT }} >> .env
     - name: Create .env file
       run: |
-        echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-        echo DEBUG=${{ secrets.DEBUG }} >> .env
-        echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-        echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-        echo DB_USER=${{ secrets.DB_USER }} >> .env
-        echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
-        echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-        echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+        printf 'SECRET_KEY="%s"\n' "${{ secrets.SECRET_KEY }}" >> .env
+        printf 'DEBUG="%s"\n' "${{ secrets.DEBUG }}" >> .env
+        printf 'DB_ENGINE="%s"\n' "${{ secrets.DB_ENGINE }}" >> .env
+        printf 'DB_NAME="%s"\n' "${{ secrets.DB_NAME }}" >> .env
+        printf 'DB_USER="%s"\n' "${{ secrets.DB_USER }}" >> .env
+        printf 'DB_PASSWORD="%s"\n' "${{ secrets.DB_PASSWORD }}" >> .env
+        printf 'DB_HOST="%s"\n' "${{ secrets.DB_HOST }}" >> .env
+        printf 'DB_PORT="%s"\n' "${{ secrets.DB_PORT }}" >> .env
 
     - name: Build and push Docker image
       run: docker-compose build
