--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,4 +80,4 @@ jobs:
       run: docker-compose up -d
 
     - name: Run Django tests
-      run: docker-compose exec web python manage.py test
+      run: docker-compose exec -T web python manage.py test
