--- a/requirements.txt
+++ b/requirements.txt
@@ -4,39 +4,31 @@ async-timeout==4.0.3
 attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
-certifi==2024.2.2
+autopep8==2.2.0
 cffi==1.16.0
 channels==4.1.0
 channels-redis==4.2.0
-charset-normalizer==3.3.2
 constantly==23.10.4
 cryptography==42.0.7
 daphne==4.1.2
-dj-rest-auth==6.0.0
 Django==5.0.6
-django-allauth==0.63.2
 django-cors-headers==4.3.1
 django-redis==5.4.0
-djangorestframework==3.15.1
-drf-yasg==1.21.7
+django-silk==5.1.0
+gprof2dot==2022.7.29
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
-inflection==0.5.1
 msgpack==1.0.8
-oauthlib==3.2.2
-packaging==24.0
+pip-autoremove==0.10.0
 psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pycodestyle==2.11.1
 pycparser==2.22
 pyOpenSSL==24.1.0
 python-decouple==3.8
-pytz==2024.1
-PyYAML==6.0.1
 redis==5.0.4
-requests==2.32.2
-requests-oauthlib==2.0.0
 service-identity==24.1.0
 setuptools==70.0.0
 six==1.16.0
@@ -44,6 +36,4 @@ sqlparse==0.5.0
 Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.12.0
-uritemplate==4.1.1
-urllib3==2.2.1
 zope.interface==6.4.post2
